--- a/music-angularjs.html
+++ b/music-angularjs.html
@@ -7,13 +7,16 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script> <!-- this is the angular script -->
 	<script src="music-app-module.js" type="text/javascript"></script>
 	<script src="music-controller.js" type="text/javascript"></script>
-
+	<script src="music-service.js" type="text/javascript"></script>
+	<script src="music-beta-service.js" type="text/javascript"></script>
 
 	<script lang="javascript"></script>
 	
 	<style></style>
 </head>
 <body ng-controller="MusicCtrl as ctrl"> 
+	<h3><span ng-bind="ctrl.about"/></h3> 
+	<h4><span ng-bind="ctrl.aboutBeta" /></h4>
 	<div>
 		<label>Filter:</label>
 		<input type="text" ng-model="filterText" />
